feat: 完成v1.2.0企业级重构与功能升级
本次提交为项目重大重构版本，实现以下核心变更：
1. 架构升级：拆出Service层，使用构造函数注入解耦业务逻辑
2. 新增国际化支持：支持简体中文/英文自动切换，UTF-8资源文件
3. 集成PlaceholderAPI：支持消息内PAPI占位符解析
4. 新增完整单元测试与JaCoCo覆盖率校验
5. 添加GitHub Actions CI/CD流水线
6. 补全MIT许可证与CHANGELOG文档
7. 新增bStats匿名统计功能
8. 重构配置管理为类型安全的ConfigService
9. 移除旧版MessageManager，替换为更安全的MessageService
10. 优化插件入口与命令执行逻辑，修复潜在NPE风险